# xtc15

./: .gitignore  install.sh  readme.md
project/: CMakeLists.txt  xcc.yaml
project/.run/: debug-run-on-target.run.xml
project/src/: main.c  mapfile.xc
